--- a/src/SearchPage/SearchPage.css
+++ b/src/SearchPage/SearchPage.css
@@ -6,20 +6,32 @@ input, select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    background-color: #EBF4FA;
 }
 
+h1{
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+}
 #inputSpace {
-    border-radius: 5px;
-    background-color: #f2f2f2;
+    border-radius: 10px;
+    background-color: #54A4DE;
     padding: 20px;
+    margin: 0px 50px 40px 50px;
 }
 
 #submit {
-    background-color: #4CAF50;
+    border-radius: 5px;
+    background-color: #FFAB35;
     border: none;
     color: white;
     text-decoration: none;
     cursor: pointer;
     margin: 8px;
     padding: 12px 16px;
+}
+
+body{
+    background-color: #EBF4FA;
 }
